<resources>
    <string name="app_name">Blogaro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="username">\@SiddyDevelops</string>
    <string name="siddharth_singh">Siddharth Singh</string>
    <string name="android_developer">Android Developer</string>
    <string name="about_me">About Me</string>
    <string name="about_us_text">Siddharth Singh is a tech enthusiast, with experience managing global teams. I\'m not a great programmer. I\'m just a good programmer with great habits. </string>
    <string name="followers">Followers</string>
    <string name="followers_count">2.5K</string>
    <string name="following">Following</string>
    <string name="following_count">250</string>
    <string name="post">Post</string>
    <string name="post_count">52</string>
    <string name="posts">Posts</string>
    <string name="big_data">Big Data?</string>
    <string name="like_count">2.1K</string>
    <string name="_1hr_ago">1hr ago</string>
    <string name="hi_siddharth">Hi, Siddharth!</string>
    <string name="explore_today_s">Explore today\'s</string>
    <string name="search_for_latest_blogs_from_entering_keywords">Search for latest blogs by entering keywords…</string>
    <string name="search_blogs">Search Blogs</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="dev_info">Designed and Developed By Siddharth Singh.\n@SiddyDevelops</string>
    <string name="catch_the_latest_blog_posts_here">Catch the latest Blog-Posts here:</string>
    <string name="blog_text_buffer">What makes an android app complete? Implementing functionalities, view, activities, using databases, adding animations, adding the perfect theme to go with the app, etc. might be the answer. But as developers, we always forget about one important thing, the first impression, i.e. Splash Screen. Even though some of us remember to implement it, we don’t like how a short-bright-white-screen ruins the splash screen, whenever we launch an android app. Have you ever wondered, why this white screen appears before the Splash-Screen?</string>
    <string name="blog_heading_buffer">Android Cold Start and Buffer Screen</string>
    <string name="blog_subHeading_buffer">Create an efficient splash screen</string>
    <string name="technology">Technology</string>
    <string name="view_more">View More</string>
    <string name="blogs_from_your_feed">Latest Blogs</string>
    <string name="technical_practical_theoretically_interesting">Technical…Practical…Theoretically Interesting</string>
    <string name="new_article">New Article</string>
    <string name="add_subtitle_for_your_article">Add subtitle for your article</string>
    <string name="add_title_for_your_article">Add title for your article</string>
    <string name="add_content_for_your_article">Add content for your article</string>
    <string name="enter_tags">Enter tags</string>
    <string name="add_tags">Add Tags</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_with_your_account">Sign in with your account</string>
    <string name="username01">Username</string>
    <string name="enter_usename_here">Enter Usename Here</string>
    <string name="password_reset">Forgot your password? <font color='#376AED'>Reset here</font></string>
    <string name="t_c">Read Terms and Conditions</string>
    <string name="sign_in_with">OR SIGN IN WITH</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
</resources>