<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="8dp"
                    app:cardBackgroundColor="#49B0E2"
                    app:cardCornerRadius="22dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="22dp"
                        app:contentPadding="5dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="8dp"
                            app:cardCornerRadius="22dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:elevation="10dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/me_photo" />

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/userID"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/avenir_std_book"
                        android:text="@string/username"
                        android:textColor="@color/dark_blue_text"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/userName"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/avenir_std_black"
                        android:text="@string/siddharth_singh"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/userSpec"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/avenir_std_roman"
                        android:text="@string/android_developer"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>